--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "react": "^16.1.0",
-    "react-native": "^0.50.3"
+    "react-native": "^0.50.3",
+    "realm": "^2.0.6"
   }
 }
