--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: objective-c
 osx_image: xcode9
+cache:
+  directories:
+   - ReactNative/node_modules
+   - Pods
 before_install:
  - cd ReactNative
  - nvm install 8
