Added travis_wait to pod install (boost) :construction_worker:

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ before_install:
 install:
  - npm install
  - cd ..
- - pod install
+ - travis_wait pod install
 script:
  - xcodebuild -project ReactNativeRealmManualLink.xcodeproj -scheme ReactNativeRealmManualLink clean build
