--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
  - node --version
 install:
  - npm install
+ - npm run postinstall
  - cd ..
  - travis_wait pod install
 script:
